fixed nav links to make them easily visible

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,17 +44,17 @@
     text-align: right;
   }
 
-    .alignRight a:link, a:visited {
-        color: steelblue;
-        text-decoration: none;
-        font-weight: bold;
-      }
+  .alignRight a:link, a:visited {
+      color: steelblue;
+      text-decoration: none;
+      font-weight: bold;
+    }
 
-    .alignRight a:hover {
-        color: whitesmoke;
-        background-color: steelblue;
-        font-weight: bold;
-      }
+  .alignRight a:hover {
+      color: whitesmoke;
+      background-color: steelblue;
+      font-weight: bold;
+    }
 
   /* ====== header ======= */
 
@@ -89,18 +89,20 @@
     padding: 5px;
   }
 
-  nav a {
-    color: lightblue;
+  a {
+    color: whitesmoke;
+    text-decoration: none;
+    font-weight: bold;
   }
 
-  nav a:link, a:visited {
-    color: lightblue;
+  nav a:visited {
+    color: whitesmoke;
     text-decoration: none;
     font-weight: bold;
   }
 
   nav a:hover {
-    color: whitesmoke;
+    color: cyan;
     font-weight: bold;
   }
 
